re PR target/29250 (internal compiler error: in extract_insn, at recog.c:2084)

2006-10-13  David Edelsohn  <edelsohn@gnu.org>
            Ian Lance Taylor  <ian@airs.com>

        PR middle-end/29250
        * expr.c (expand_expr_real_1) <NON_LVALUE_EXPR, NOP_EXPR,
        CONVERT_EXPR>: Change EXPAND_SUM modifier to EXPAND_NORMAL when
        recursing.

Co-Authored-By: Ian Lance Taylor <ian@airs.com>

From-SVN: r118421